--- a/UPLS_Py/doc/latex/structHookInfo.tex
+++ b/UPLS_Py/doc/latex/structHookInfo.tex
@@ -28,8 +28,8 @@ float {\bfseries get\+MCURuntime} () const
 \mbox{\Hypertarget{structHookInfo_ae17fb7866f801d3c31521ace84eb8860}\label{structHookInfo_ae17fb7866f801d3c31521ace84eb8860}} 
 uint16\+\_\+t {\bfseries getlost\+Messages} () const
 \item 
-\mbox{\Hypertarget{structHookInfo_a500180b97e5df82426f319f65e8e87b3}\label{structHookInfo_a500180b97e5df82426f319f65e8e87b3}} 
-int16\+\_\+t {\bfseries get\+Temperature} () const
+\mbox{\Hypertarget{structHookInfo_a5e7272eb40c7e7f79ebc3d1bdbae2bb0}\label{structHookInfo_a5e7272eb40c7e7f79ebc3d1bdbae2bb0}} 
+float {\bfseries get\+Temperature} () const
 \item 
 \mbox{\Hypertarget{structHookInfo_afbd4c01c08291f902bf05564c86b067a}\label{structHookInfo_afbd4c01c08291f902bf05564c86b067a}} 
 \mbox{\hyperlink{structHookInfo_1_1Battery}{Battery}} {\bfseries get\+Battery\+Info} () const
