--- a/UPLS_Py/doc/latex/structHookInfo_1_1Battery.tex
+++ b/UPLS_Py/doc/latex/structHookInfo_1_1Battery.tex
@@ -12,8 +12,8 @@ enum class {\bfseries State} \+: uint8\+\_\+t \{ {\bfseries Unknown} = 0
 \doxysubsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\Hypertarget{structHookInfo_1_1Battery_a24e784daa034924434d0bcbd83da97af}\label{structHookInfo_1_1Battery_a24e784daa034924434d0bcbd83da97af}} 
-uint16\+\_\+t {\bfseries get\+Voltage} () const
+\mbox{\Hypertarget{structHookInfo_1_1Battery_a4aa5028162e97b8c9381e0cb282c0116}\label{structHookInfo_1_1Battery_a4aa5028162e97b8c9381e0cb282c0116}} 
+float {\bfseries get\+Voltage} () const
 \item 
 \mbox{\Hypertarget{structHookInfo_1_1Battery_acfead792aee6d6d1eba99a72b09728ea}\label{structHookInfo_1_1Battery_acfead792aee6d6d1eba99a72b09728ea}} 
 State {\bfseries get\+State} () const
