--- a/UPLS_Py/doc/latex/structHookInfo_1_1Latch.tex
+++ b/UPLS_Py/doc/latex/structHookInfo_1_1Latch.tex
@@ -19,8 +19,8 @@ enum class {\bfseries State} \+: uint8\+\_\+t \{ \newline
 \mbox{\Hypertarget{structHookInfo_1_1Latch_a5165c627b2d42119691430eda9c642ea}\label{structHookInfo_1_1Latch_a5165c627b2d42119691430eda9c642ea}} 
 void {\bfseries set\+Current} (uint16\+\_\+t \+\_\+current)
 \item 
-\mbox{\Hypertarget{structHookInfo_1_1Latch_a5c46a9eed3e9f870bccbb156edefb29b}\label{structHookInfo_1_1Latch_a5c46a9eed3e9f870bccbb156edefb29b}} 
-uint16\+\_\+t {\bfseries get\+Current} () const
+\mbox{\Hypertarget{structHookInfo_1_1Latch_aedebcd4f8206edb566fc609b9834da16}\label{structHookInfo_1_1Latch_aedebcd4f8206edb566fc609b9834da16}} 
+float {\bfseries get\+Current} () const
 \item 
 \mbox{\Hypertarget{structHookInfo_1_1Latch_a632e9810b5de801f1b2d541fd8f28bf6}\label{structHookInfo_1_1Latch_a632e9810b5de801f1b2d541fd8f28bf6}} 
 void {\bfseries set\+State} (State \+\_\+state)
