--- a/UPLS_Py/doc/latex/structLandingGearInfo_1_1Leg.tex
+++ b/UPLS_Py/doc/latex/structLandingGearInfo_1_1Leg.tex
@@ -6,7 +6,7 @@
 \mbox{\Hypertarget{structLandingGearInfo_1_1Leg_af59ce3b04e56abc914682db1ce2eaf95}\label{structLandingGearInfo_1_1Leg_af59ce3b04e56abc914682db1ce2eaf95}} 
 enum class {\bfseries Status} \+: uint8\+\_\+t \{ \newline
 {\bfseries Unknown} = 0
-, {\bfseries Opened}
+, {\bfseries Open}
 , {\bfseries Closed}
 , {\bfseries Closing}
 , \newline
