--- a/UPLS_Py/doc/latex/structLedInfo_1_1Led_1_1Normal.tex
+++ b/UPLS_Py/doc/latex/structLedInfo_1_1Led_1_1Normal.tex
@@ -3,8 +3,8 @@
 \doxysubsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\Hypertarget{structLedInfo_1_1Led_1_1Normal_ac7000b123637ed1c9cb5062bfe356240}\label{structLedInfo_1_1Led_1_1Normal_ac7000b123637ed1c9cb5062bfe356240}} 
-{\bfseries Normal} (uint8\+\_\+t \+\_\+brightness)
+\mbox{\Hypertarget{structLedInfo_1_1Led_1_1Normal_a997dcb24267a03f3fbcd181cf9c833d2}\label{structLedInfo_1_1Led_1_1Normal_a997dcb24267a03f3fbcd181cf9c833d2}} 
+{\bfseries Normal} (uint8\+\_\+t \+\_\+brightness=255)
 \item 
 \mbox{\Hypertarget{structLedInfo_1_1Led_1_1Normal_adab418eef5ca98443d28048cab0969b2}\label{structLedInfo_1_1Led_1_1Normal_adab418eef5ca98443d28048cab0969b2}} 
 uint8\+\_\+t {\bfseries get\+Brightness} () const
