--- a/UPLS_Py/doc/latex/structLedInfo_1_1Led.tex
+++ b/UPLS_Py/doc/latex/structLedInfo_1_1Led.tex
@@ -15,10 +15,13 @@ struct \mbox{\hyperlink{structLedInfo_1_1Led_1_1Pulsing}{Pulsing}}
 \begin{DoxyCompactItemize}
 \item 
 \mbox{\Hypertarget{structLedInfo_1_1Led_a17d6c50dd88c27ffc67294703aca0367}\label{structLedInfo_1_1Led_a17d6c50dd88c27ffc67294703aca0367}} 
-enum class {\bfseries Mode} \+: uint8\+\_\+t \{ {\bfseries Normal}
+enum class {\bfseries Mode} \+: uint8\+\_\+t \{ \newline
+{\bfseries Unknown} = 0
+, {\bfseries Normal}
 , {\bfseries Pulsing}
 , {\bfseries Fade\+In\+Out}
-, {\bfseries Blinking}
+, \newline
+{\bfseries Blinking}
  \}
 \end{DoxyCompactItemize}
 \doxysubsection*{Public Member Functions}
@@ -39,8 +42,8 @@ enum class {\bfseries Mode} \+: uint8\+\_\+t \{ {\bfseries Normal}
 \mbox{\Hypertarget{structLedInfo_1_1Led_a3a62933979cc70dfb295f3e85fc93693}\label{structLedInfo_1_1Led_a3a62933979cc70dfb295f3e85fc93693}} 
 bool {\bfseries get\+Enabled} () const
 \item 
-\mbox{\Hypertarget{structLedInfo_1_1Led_a9f572317abb770d533f8ca1c5b37ec93}\label{structLedInfo_1_1Led_a9f572317abb770d533f8ca1c5b37ec93}} 
-uint8\+\_\+t {\bfseries get\+Current\+\_\+value} () const
+\mbox{\Hypertarget{structLedInfo_1_1Led_aaab22ed36485146dd004873ac90966df}\label{structLedInfo_1_1Led_aaab22ed36485146dd004873ac90966df}} 
+uint8\+\_\+t {\bfseries get\+Current\+Value} () const
 \item 
 \mbox{\Hypertarget{structLedInfo_1_1Led_a0382789da4f28ab6d1be6de35560b4e8}\label{structLedInfo_1_1Led_a0382789da4f28ab6d1be6de35560b4e8}} 
 Mode {\bfseries get\+Mode} () const
