--- a/UPLS_Py/doc/latex/structLedInfo_1_1Led_1_1Blinking.tex
+++ b/UPLS_Py/doc/latex/structLedInfo_1_1Led_1_1Blinking.tex
@@ -3,8 +3,8 @@
 \doxysubsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\Hypertarget{structLedInfo_1_1Led_1_1Blinking_a7f46c49fd4ad199deefff400a02a3f47}\label{structLedInfo_1_1Led_1_1Blinking_a7f46c49fd4ad199deefff400a02a3f47}} 
-{\bfseries Blinking} (uint16\+\_\+t \+\_\+on\+Duration, uint16\+\_\+t \+\_\+off\+Duration)
+\mbox{\Hypertarget{structLedInfo_1_1Led_1_1Blinking_a8519075b6765b1412be4ce64d4311684}\label{structLedInfo_1_1Led_1_1Blinking_a8519075b6765b1412be4ce64d4311684}} 
+{\bfseries Blinking} (uint16\+\_\+t \+\_\+on\+Duration=1000, uint16\+\_\+t \+\_\+off\+Duration=1000)
 \item 
 \mbox{\Hypertarget{structLedInfo_1_1Led_1_1Blinking_a00d3ea3caf5064a0ab2108a6d001a4b0}\label{structLedInfo_1_1Led_1_1Blinking_a00d3ea3caf5064a0ab2108a6d001a4b0}} 
 uint16\+\_\+t {\bfseries get\+On\+Duration} () const
