--- a/UPLS_Py/doc/latex/structLedInfo_1_1Led.tex
+++ b/UPLS_Py/doc/latex/structLedInfo_1_1Led.tex
@@ -3,41 +3,20 @@
 \doxysubsection*{Classes}
 \begin{DoxyCompactItemize}
 \item 
-struct \mbox{\hyperlink{structLedInfo_1_1Led_1_1Blinking}{Blinking}}
-\item 
-struct \mbox{\hyperlink{structLedInfo_1_1Led_1_1FadeInFadeOut}{Fade\+In\+Fade\+Out}}
-\item 
-struct \mbox{\hyperlink{structLedInfo_1_1Led_1_1Normal}{Normal}}
-\item 
-struct \mbox{\hyperlink{structLedInfo_1_1Led_1_1Pulsing}{Pulsing}}
+struct \mbox{\hyperlink{structLedInfo_1_1Led_1_1Settings}{Settings}}
 \end{DoxyCompactItemize}
 \doxysubsection*{Public Types}
 \begin{DoxyCompactItemize}
 \item 
 \mbox{\Hypertarget{structLedInfo_1_1Led_a17d6c50dd88c27ffc67294703aca0367}\label{structLedInfo_1_1Led_a17d6c50dd88c27ffc67294703aca0367}} 
-enum class {\bfseries Mode} \+: uint8\+\_\+t \{ \newline
-{\bfseries Unknown} = 0
+enum class {\bfseries Mode} \+: uint8\+\_\+t \{ {\bfseries Unknown} = 0
 , {\bfseries Normal}
+, {\bfseries Soft}
 , {\bfseries Pulsing}
-, {\bfseries Fade\+In\+Out}
-, \newline
-{\bfseries Blinking}
  \}
 \end{DoxyCompactItemize}
 \doxysubsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
-\item 
-\mbox{\Hypertarget{structLedInfo_1_1Led_a2c25f4584c0414656e6348b7922f3840}\label{structLedInfo_1_1Led_a2c25f4584c0414656e6348b7922f3840}} 
-{\bfseries Led} (\mbox{\hyperlink{structLedInfo_1_1Led_1_1Pulsing}{Pulsing}} \+\_\+pulsing)
-\item 
-\mbox{\Hypertarget{structLedInfo_1_1Led_adee418be7fcc818c3e5e95baaf40fdd0}\label{structLedInfo_1_1Led_adee418be7fcc818c3e5e95baaf40fdd0}} 
-{\bfseries Led} (\mbox{\hyperlink{structLedInfo_1_1Led_1_1Blinking}{Blinking}} \+\_\+blinking)
-\item 
-\mbox{\Hypertarget{structLedInfo_1_1Led_ac27183483ad8fca82653036fc0609fc1}\label{structLedInfo_1_1Led_ac27183483ad8fca82653036fc0609fc1}} 
-{\bfseries Led} (\mbox{\hyperlink{structLedInfo_1_1Led_1_1Normal}{Normal}} \+\_\+normal)
-\item 
-\mbox{\Hypertarget{structLedInfo_1_1Led_a230dfafd72d26179be7962621e75b219}\label{structLedInfo_1_1Led_a230dfafd72d26179be7962621e75b219}} 
-{\bfseries Led} (\mbox{\hyperlink{structLedInfo_1_1Led_1_1FadeInFadeOut}{Fade\+In\+Fade\+Out}} \+\_\+fade\+In\+Out)
 \item 
 \mbox{\Hypertarget{structLedInfo_1_1Led_a3a62933979cc70dfb295f3e85fc93693}\label{structLedInfo_1_1Led_a3a62933979cc70dfb295f3e85fc93693}} 
 bool {\bfseries get\+Enabled} () const
@@ -48,17 +27,8 @@ uint8\+\_\+t {\bfseries get\+Current\+Value} () const
 \mbox{\Hypertarget{structLedInfo_1_1Led_a0382789da4f28ab6d1be6de35560b4e8}\label{structLedInfo_1_1Led_a0382789da4f28ab6d1be6de35560b4e8}} 
 Mode {\bfseries get\+Mode} () const
 \item 
-\mbox{\Hypertarget{structLedInfo_1_1Led_a89d0f58c9642a502681c4f6e5677457a}\label{structLedInfo_1_1Led_a89d0f58c9642a502681c4f6e5677457a}} 
-\mbox{\hyperlink{structLedInfo_1_1Led_1_1Pulsing}{Pulsing}} {\bfseries get\+Pulsing\+Settings} () const
-\item 
-\mbox{\Hypertarget{structLedInfo_1_1Led_a88e03bc563b1101f4f517d157b181f02}\label{structLedInfo_1_1Led_a88e03bc563b1101f4f517d157b181f02}} 
-\mbox{\hyperlink{structLedInfo_1_1Led_1_1Blinking}{Blinking}} {\bfseries get\+Blinking} () const
-\item 
-\mbox{\Hypertarget{structLedInfo_1_1Led_a4eb09e34c7d36a0275af3fb06f5d87b8}\label{structLedInfo_1_1Led_a4eb09e34c7d36a0275af3fb06f5d87b8}} 
-\mbox{\hyperlink{structLedInfo_1_1Led_1_1Normal}{Normal}} {\bfseries get\+Normal\+Settings} () const
-\item 
-\mbox{\Hypertarget{structLedInfo_1_1Led_a830582e555d4b50f60e40013e7fac757}\label{structLedInfo_1_1Led_a830582e555d4b50f60e40013e7fac757}} 
-\mbox{\hyperlink{structLedInfo_1_1Led_1_1FadeInFadeOut}{Fade\+In\+Fade\+Out}} {\bfseries get\+Fade\+In\+Fade\+Out\+Settings} () const
+\mbox{\Hypertarget{structLedInfo_1_1Led_a4d04f380cf085df9b22758ad250f045a}\label{structLedInfo_1_1Led_a4d04f380cf085df9b22758ad250f045a}} 
+\mbox{\hyperlink{structLedInfo_1_1Led_1_1Settings}{Settings}} {\bfseries get\+Settings} () const
 \end{DoxyCompactItemize}
 
 
